fix overflow screen; display board status

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -10,7 +10,7 @@
 }
 
 .display-status:hover > .board-info {
-    display: block;
+    display: inline-block;
 }
 
 .animation-100 {
@@ -27,6 +27,18 @@
     animation-duration: 0.4s; /** specify duration before and after*/
     animation-iteration-count: infinite;
     animation-timing-function: steps(2);
+}
+
+.left-100 {
+  left: 100px !important;
+}
+
+.left--100 {
+  left: -100px !important;
+}
+
+.flip-horizontal {
+  transform: scaleX(-1);
 }
 
 @media (hover: hover) {
